apps/monitoring/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.orleans.io`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
  tls:
    secretName: wildcard-orleans-io
